[package]
name = "drng"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "A disjoint range implementation."
documentation = "https://docs.rs/drng/latest/drng/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
